# haskell-nix-template

./: README.md  default.nix  hie.yaml  new-project.cabal  shell.nix
src/: Lib.hs
